# utils

./: CMakeLists.txt
Threading/: any.h  any_callback.h  callback.h  thread.cpp  thread.h  thread_dispatcher.cpp  thread_manager.cpp  thread_manager.h  threading_helpers.h
include/: delegate.h  std_headers.hpp  tuple.h  tuple_details.h
src/: main.cpp
